[WIP] Update to latest feature/apigate branch

--- a/config/gateway/barong.yaml
+++ b/config/gateway/barong.yaml
@@ -1,6 +1,7 @@
 apiVersion: ambassador/v0
 kind: Mapping
 name: barong
-prefix: /barong
-rewrite: /barong
+host: barong.wb.local
+prefix: /
+rewrite: /
 service: barong:8001
