--- a/config/peatio.env
+++ b/config/peatio.env
@@ -2,8 +2,8 @@ RAILS_ENV=development
 RAILS_ROOT=/home/app
 
 PORT=8000
-URL_HOST=wb.local
-URL_ROOT_PATH=/peatio/
+URL_HOST=peatio.wb.local
+URL_ROOT_PATH=/
 
 LOG_LEVEL=debug
 
